millionaire: Finalize explanation, cross-link, final touches

--- a/_posts/2022-01-23-ymp.md
+++ b/_posts/2022-01-23-ymp.md
@@ -1,25 +1,44 @@
 ---
 layout: post
 title: Yao's Millionaires' problem calculator
-tags: cryptography programming javascript
+tags: cryptography programming javascript economy
 hidden: true
 ---
 <link rel="stylesheet" href="/resources/2022-ymp/style.css"/>
 
+## Problem statement
+
+Two millionaires want to compare their wealth without revealing the exact
+wealth to each other or a third party.
+More in [Wikipedia article](https://en.wikipedia.org/wiki/Yao's_Millionaires'_Problem).
+
 ## Instructions
 
-1. Alice and Bob agrees on common domain and communication channel
-1. Alice sends *challenge* to Bob
-1. Bob sends *response* to Alice
-1. Alice sends *acknowledgement* to Bob
-1. Bob shares result with Alice
+
+         
+        0. Alice and Bob agree on common domain and communication channel
+        
+               Alice               (channel)               Bob
+               -----                                       ---
+               secret a                                    secret b
+        1.                  ---  challenge --->
+        2.                           <--- response ---       
+        3.                  --- acknowledgement --->
+                                                           result of a >= b
+        4.                       <--- share result ---       
+         
+
 
 Red input fields are for values provided by Alice.
 Blue input fields are for values provided by Bob.
 This page serves only to generate and process the messages, it doesn't send
 anything (it can work offline).
-The messages cannot restore more than comparison result.
+The calculator stores single-use keys in memory though, so the *page must be
+kept open during an ongoing exchange*.
 
+The messages cannot restore more than comparison result,
+[more detailed explanation]({% post_url 2022-01-26-ymp-explanation %})
+but still
 **Use at your own risk.**
 
 ## Domain
@@ -82,10 +101,6 @@ The messages cannot restore more than comparison result.
 <script src="/resources/2022-ymp/ymp.js" type="module"></script>
 <script src="/resources/2022-ymp/nacl-util.js"></script>
 <script>
-// TODO idea: use promises where user input matters?
-// beware its just a toy, self-rolled (bugs, side-channels, post-quantum crypto)
-// TODO note: why JS? available, interactive
-// TODO note: protocol encodingencoding  is still evolving
 
 // TODO move functions out of even handler
 function encode_(o) {
