millionaire: Add self tests

--- a/_posts/2022-01-23-ymp.md
+++ b/_posts/2022-01-23-ymp.md
@@ -145,24 +145,6 @@ function decode(str) {
 	return decode_(o1);
 }
 
-function test() {
-	let a, b;
-	let alice = new window.Alice(new window.Domain(0, 1000, 1), a = 684);
-	let bob = new window.Bob(new window.Domain(0, 1000, 1), b = 954);
-
-	let ch = alice.produceChallenge();
-	bob.consumeChallenge(ch);
-
-	let re = bob.produceResponse();
-	alice.consumeResponse(re);
-
-	let ac = alice.produceAcknowledgement();
-	console.log(ac);
-	bob.consumeAcknowledgement(ac);
-
-	console.log(a, b, bob.isGreater ? "A<B" : "A>=B");
-}
-
 function buttonUnlocker(elField, elButton) {
 	function handler(e) {
 		if (e.currentTarget.value)
@@ -317,8 +299,6 @@ function setupBob(ctx) {
 }
 
 document.addEventListener('DOMContentLoaded', () => {
-	test();
-
 	let ctx = {}
 	// ------
 	function setupDomain(e) {
@@ -345,6 +325,7 @@ document.addEventListener('DOMContentLoaded', () => {
 	setupDomain();
 	setupAlice(ctx);
 	setupBob(ctx);
+	ympSelftest();
 	document.getElementById("dom_setup").addEventListener("click", setupDomain);
 
 });
