--- a/_posts/2022-01-23-ymp.md
+++ b/_posts/2022-01-23-ymp.md
@@ -2,6 +2,7 @@
 layout: post
 title: Yao's Millionaires' problem calculator
 tags: cryptography programming javascript economy
+hidden: true
 ---
 <link rel="stylesheet" href="/resources/2022-ymp/style.css"/>
 
