--- a/_posts/2022-01-23-ymp.md
+++ b/_posts/2022-01-23-ymp.md
@@ -1,8 +1,7 @@
 ---
 layout: post
-title: Yao's Millionaires' problem calculator
+title: Yao's Millionaires' problem calculator (beta)
 tags: cryptography programming javascript economy
-hidden: true
 ---
 <link rel="stylesheet" href="/resources/2022-ymp/style.css"/>
 
