--- a/_posts/2016-03-04-teremin.md
+++ b/_posts/2016-03-04-teremin.md
@@ -1,7 +1,7 @@
 ---
 title: Teremin (play)
 layout: post
-tags: culture
+tags: culture theater
 ---
 
 **Spoiler alert: Following text contains topics and plot of the play Teremin.
