--- a/_posts/2021-08-17-summer.md
+++ b/_posts/2021-08-17-summer.md
@@ -7,26 +7,31 @@ tags: ['travel', 'cycling', 'national park', 'Vysočina']
 ## Diary
 
 ### Day 0
+
 - train travel, quite OK
 - running in the rain
 
 ### Day 1
+
 - bicycle trip
   - warmup, short(er)
   - acknowledging glades
   - enjoying new cycling path along the river
 
 ### Day 2
+
 - slow morning, changed plans due to outer conditions
-- good lecture about probability (TODO embed notes)
+- good lecture about Bayesian probability (popular science)
 
 ### Day 3
+
 - cleaning and maintenance
 - good trip to the national park
   - good weather but first signs of allergy
 - accidental socialization with old friends in a pub -- very good (factor of surprise, unexpected)
 
 ### Day 4
+
 - trip to highlands
   - very picturesque sceneries
   - colder windier weather
@@ -37,9 +42,10 @@ tags: ['travel', 'cycling', 'national park', 'Vysočina']
   - plain exposition
   - not much technical details -- it is undocumented and unique so it could only be estimated
   - the staff knew only the learnt basics
-  - reason: it was actually a social living/flats, most of the 20th century
+  - reason: it was actually a social living/flats (not a mill), most of the 20th century
 
 ### Day 5
+
 - trip to water dam
   - almost trapped in fallen forest and river vegetation
   - surprising unquality of cycling paths, not really for a road bike
@@ -50,5 +56,6 @@ tags: ['travel', 'cycling', 'national park', 'Vysočina']
 - evening pub with another friend, discussing cycling trips
 
 ### Day 6
+
 - travel back to Prague
 - one quick AG test and pub after arrival
