--- a/_posts/2022-10-26-signal.md
+++ b/_posts/2022-10-26-signal.md
@@ -25,8 +25,8 @@ the foundation had:
       * more likey just 10e6 given geometric growth
     * the reported number in 2022 is 40e6 users
 
-So the 2019 data gives us the expense is **between $0.38 /user/year 
-and $27 /user/year**.
+So the 2019 data gives us the expense is **between \$0.38 /user/year 
+and \$27 /user/year**.
 The former is the worst case estimate when development/maintenance froze and
 just the infrastructure necessary for the communication was kept up.
 The latter are total expenses spread over the minimal estimate of active users.
@@ -35,3 +35,11 @@ This is not very economic estimate, it spans roughly two decimal orders of
 magnitude, despite that say that some **$3 /user/year** donations are necessary
 to make Signal sustainable in the current form.
 
+### Update 2023-10-19
+
+[Signal blogs](https://signal.org/blog/signal-is-expensive/) about \$14e6 / year
+on infrastructure costs and \$19e6 / year on personal costs (~50 FTEs), the
+article writes about 100kHz requests.
+
+Assuming, 30 transactions/user/day and 2 requests/transaction, it estimates
+some 144e6 active users. Or \$0.2 / user / year.
