SW laws: Add Hyrum's law

--- a/_posts/2022-04-30-oss-laws.md
+++ b/_posts/2022-04-30-oss-laws.md
@@ -29,3 +29,7 @@ Not only software.
 > design whose structure is a copy of the organization's communication
 > structure.
 
+[Hyrum's law](https://www.hyrumslaw.com/)
+> With a sufficient number of users of an API, it does not matter what you
+> promise in the contract:
+> all observable behaviors of your system will be depended on by somebody.
