Add bikepacking tag

--- a/_posts/2024-10-25-firenze.md
+++ b/_posts/2024-10-25-firenze.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Firenze (Süd)Tirol
-tags: Austria Italy Tyrol Alps plain Firenze
+tags: Austria Italy Tyrol Alps plain Firenze bikepacking
 ---
 
 ## Selection
