--- a/_posts/2024-07-22-cyklo.md
+++ b/_posts/2024-07-22-cyklo.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: (Süd)Tirol
-tags: Germany Austria Italy cycling mountains train
+tags: Germany Austria Italy bikepacking mountains train
 ---
 
 ## Preparations
