cyklo-2024: Add composed map

--- a/_posts/2024-07-22-cyklo.md
+++ b/_posts/2024-07-22-cyklo.md
@@ -9,6 +9,9 @@ tags: Germany Austria Italy cycling mountains train
   * looking up various bike-packing setups on the internets
   * adding bikepacking
 
+{:.thumbnail}
+[![Recorded path](/resources/2024-cyklo/mapycz.jpg)](/resources/2024-cyklo/mapycz.jpg)
+
 ## Diary
 
 ### Day 00 (2024-08-14)
