Momo: add quotation

--- a/_posts/2025-04-06-momo.md
+++ b/_posts/2025-04-06-momo.md
@@ -46,11 +46,13 @@ produzieren) and Leute (die die Zeit völlig ohne Diebstahl wieder verbrauchen).
 
 ## Figuren
 
-  * Momo -- ein Mädchen ohne Eltern und ohne Schule
+  * Momo -- ein Mädchen ohne Eltern und ohne Schule, neugierig, mutig,
+    vielleicht hat sie zaubere Macht
   * Bepe Straßenkehrer -- alter Freund von Momo
   * Gigi Fremdenführer -- erstens Arbeitslos Erzähler von verschiedenen
     Geschichten, später populär Unterhalter
-  * Meister Hora -- Herrscher oder Wächter der Zeit, er züchtet Zeitblumen
+  * Meister Hora -- Herrscher oder Wächter der Zeit, er wohnt in Nirgend-Haus
+    und er züchtet Zeitblumen
   * Kassiopea -- Schildkröte von Hora, die 30 Minuten in der Zukunft sehen kann
   * grauen Herrn -- eine Menge von mystische Personen, sie sind kalt und
     rauchen eine Zigarre, sie sind Zeitparasiten der Leute, weil sie keine
@@ -67,3 +69,25 @@ produzieren) and Leute (die die Zeit völlig ohne Diebstahl wieder verbrauchen).
   * Zeit ist Sauerstoff (Blumen produzieren ihn und Leute verbrauchen ihn.)
   * Schwarzes Loch mit Ereignishorizont (Niemals-Gasse und ihre schwere Erreichbarkeit.)
   * Der Unterschied zwischen die Welt der Kinder und der Erwachsene.
+
+## Abschnitt
+
+> „Weil sie von etwas Totem ihr Dasein fristen“, antwortete Meister Hora. „Du
+> weißt ja, dass sie von der Lebenszeit der Menschen existieren. Aber diese
+> Zeit stirbt buchstäblich, wenn sie von ihrem wahren Eigentümer losgerissen
+> wird. Denn jeder Mensch hat seine Zeit. Und nur so lang sie wirklich die
+> seine ist, bleibt sie lebendig.“<br/>
+> „Dann sind die grauen Herren also gar keine Menschen?“<br/>
+> „Nein, sie haben nur Menschengestalt angenommen.“<br/>
+> „Aber, was sind sie dann?“<br/>
+> „In Wirklichkeit sind sie nichts.“<br/>
+> „Und wo kommen sie her?“<br/>
+> „Sie entstehen, weil die Menschen ihnen die Möglichkeit geben, zu entstehen.
+> Das genügt schon, damit es geschieht. Und nun geben die Menschen ihnen auch
+> noch die Möglichkeit, sie zu beherrschen. Und auch das genügt, damit es
+> geschehen kann.“<br/>
+> „Und wenn sie keine Zeit mehr stehlen könnten?“<br/>
+> „Dann müssten sie ins Nichts zurück, aus dem sie gekommen sind.“<br/>
+> Meister Hora nahm Momo die Brille ab und steckte sie ein.
+> „Aber leider“, fuhr er nach einer Weile fort, „haben sie schon viele
+> Helfershelfer unter den Menschen. Das ist das Schlimme.“
