--- a/_posts/2025-04-06-momo.md
+++ b/_posts/2025-04-06-momo.md
@@ -13,35 +13,35 @@ Michael Ende. Momo. Thienemann-Essligner Verlag GmbH, 2021 (ebook).
 
 *spoiler alert*
 
-In der Einleitung lernen wir, dass Momo ein allein-lebende Mädchen ist.
-Sie wohnt in einem verlassenen Amphitheater hinter der Stadt (die Stadt ist unbekannt, nicht gennant) und Leute kommen zu ihr.
-Kinder kommen zu ihr zu spielen und Erwaschene kommen zu ihr zu sprechen, weil sie gut horcht.
-Ab und zu kommt auch Gigi Fremdenführer, der interessante und einfällige Geschichte erzählt.
+In der Einleitung lernen wir, dass Momo ein allein-lebendes Mädchen ist.
+Sie wohnt in einem verlassenen Amphitheater hinter der Stadt (die Stadt ist unbekannt, nicht genannt) und Leute kommen zu ihr.
+Kinder kommen zu ihr zu spielen und Erwachsene kommen zu ihr zu sprechen, weil sie gut horcht.
+Ab und zu kommt auch Gigi Fremdenführer, der interessanten und einfallsreichen Geschichten erzählt.
 
-Einigen Tagen hören die Erwachsene auf, zu kommen.
-Der Grund sind die graue Herrn, mit den die Leute einen Vertrag abgeschloßen haben.
-Die Leute sollen bei den grauen ihre Zeit sparen (und später zurück bekommen),
-tatsächlich ist es aber ein Diebstahl und die Leute einfach das Treffen mit
-den grauen Herrn vergessen.
-Die Erwachsene haben keine Zeit mehr zu dem Theater zu kommen und die Kinder
-werden Momo zu besuchen verboten.
+Einigen Tagen hören die Erwachsenen auf, zu kommen.
+Der Grund sind die grauen Herren, mit denen die Leute einen Vertrag abgeschlossen haben.
+Die Leute sollen bei den Grauen ihre Zeit sparen (und später zurück bekommen),
+tatsächlich ist es aber ein Diebstahl und die Leute vergessen einfach das
+Treffen mit den grauen Herrn.
+Die Erwachsenen haben keine Zeit mehr zu dem Theater zu kommen und den Kindern
+wurden verboten, Momo zu besuchen.
 
-Momo ist wieder allein und die Grauen wollen sie erpressern, weil sie (einzige)
+Momo ist wieder allein und die Grauen wollen sie erpressern, weil sie (als einzige)
 sie sehen kann.
 Nach einer Verfolgung befindet sich Momo in der Niemals-Gasse, wo das Haus von
 Meister Hora steht.
-Er erklärt sie, wie es mit der Zeit (und den grauen Herrn) funkioniert and
+Er erklärt ihr, wie es mit der Zeit (und den grauen Herren) funktioniert und
 "gibt" ihr eine Schildkröte Kasiopea als eine Hilfskraft.
 Wenn Momo aus der Niemals-Gasse zurück kommt, ist schon ein Jahr in der Stadt
 verlaufen und die Grauen herrschen.
 Momo hat nichts, auch nichts zu verlieren, deshalb macht sie die Entscheidung
 die Grauen zu kämpfen.
-Deswegen muss sie wieder Meister Hora finden und mit ihm einen gefährlichen Plan auswirken.
-Der Plan enthält Zeitfluss Manipulierung, zum Glück können die Grauen ohne Zeit
+Deswegen muss sie wieder Meister Hora finden und mit ihm einen gefährlichen Plan verwirklichen.
+Der Plan enthält Zeitfluss-Manipulierung, zum Glück können die Grauen ohne Zeit
 nicht überleben.
 
 Am Ende erneut Momo das Gleichgewicht zwischen Zeitblumen (die die Zeit
-produzieren) and Leute (die die Zeit völlig ohne Diebstahl wieder verbrauchen).
+produzieren) und Leute (die die Zeit völlig ohne Diebstahl wieder verbrauchen).
 
 
 ## Figuren
