Paris 2013: add GPX from retro matching

--- a/_posts/2013-07-30-paris.md
+++ b/_posts/2013-07-30-paris.md
@@ -166,7 +166,8 @@ layout: post
   * Hledání hostelu, resp. infocentra. Většina hostelů je na Montmartru.
   * konec a spaní: budget hotel na Coulaincourt Square (27 € za osobu, pokoj pro dva se sprchou, WC společné)
   * ujeto: 58,8 km, doba jízdy: 4:00, maximum 37,29 km/h.
-    * celkem najeto: 1389 km za 71:26 (včetně přesunů kol po Paříži)
+    * celkem najeto (tachometr): 1389 km za 71:26 (včetně přesunů kol po Paříži)
+    * retrospektivní trasa ([mapy.com](https://mapy.com/s/karejefovo), [GPX](/resources/paris-retro.gpx)): 1163 km
 
 {:.thumbnail}
 [![Foto dokládající dobytí Paříže.](/resources/paris-ivo.jpg)](/resources/paris-ivo.jpg)
