Barcelona draft, finalize to posts

--- a/_posts/2024-10-25-firenze.md
+++ b/_posts/2024-10-25-firenze.md
@@ -238,6 +238,10 @@ tags: Austria Italy Tyrol Alps plain Firenze bikepacking
     * racing pace would be much more insane and with more car roads
     * still hesitating about "credit card bike packing", it could work in
       practice (one could always find accommodation for the next night)
+      * update after [Barcelona]({% post_url 2025-10-28-barcelona %}): think
+        twice before doing minimalistic non-redundant bikepacking, equipment
+        wears out statistically over time and kilometers (and shops aren't
+        everywhere and always open)
 
 
 {:.thumbnail}
